fix: tags wrapping

--- a/apps/web/src/app/events/[slug]/page.module.scss
+++ b/apps/web/src/app/events/[slug]/page.module.scss
@@ -52,6 +52,7 @@
 
   .tags {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     gap: 8px;
   }
